
7.54  2017-11-05

7.53  2017-11-04
  - Added module Mojo::Promise.
  - Improved Mojo::IOLoop::Delay to be a subclass of Mojo::Promise.

7.52  2017-11-02
  - Added delete_p, get_p, head_p, options_p, patch_p, post_p, put_p and start_p
    methods to Mojo::UserAgent.

7.51  2017-10-31
  - Added -signatures flag to Mojo::Base and Mojolicious::Lite.
  - Added support for new HTTP status code.
  - Improved ojo to enable subroutine signatures automatically on Perl 5.20+.

7.50  2017-10-30
  - Deprecated error and finish events in Mojo::IOLoop::Delay. Since there is no
    good way to warn our users about this deprecation, it will be in effect
    until the next major release. Where we will also change the base class from
    Mojo::EventEmitter to Mojo::Base.
  - Improved documentation browser with links to MetaCPAN.

7.49  2017-10-28
  - Deprecated Mojo::IOLoop::Delay::data and Mojo::IOLoop::Delay::remaining.
  - Added Promises/A+ support. Note that Mojo::IOLoop::Delay previously
    inherited a catch method from Mojo::EventEmitter that was passed the error
    message as second argument instead of the first, so you might have to change
      $delay->catch(sub { my ($delay, $error) = @_; ... });
    to
      $delay->catch(sub { my ($error) = @_; ... });
  - Added all, catch, finally, race and then methods to Mojo::IOLoop::Delay.
  - Updated jQuery to version 3.2.1.

7.48  2017-10-19
  - Reverted previous Mojo::File change since there were too many unintended
    side effects.

7.47  2017-10-05
  - Added multipart content generator to Mojo::UserAgent::Transactor.
  - Fixed a bug in Mojo::File where parts of a path could get accidentally
    upgraded from bytes to characters.

7.46  2017-09-12
  - Fixed support for versions of IO::Socket::SSL older than 1.965 again.

7.45  2017-09-06
  - Fixed support for versions of IO::Socket::SSL older than 1.965. (mudler,
    foursixnine, genio, sri)

7.44  2017-09-02